--- a/veni.html
+++ b/veni.html
@@ -108,7 +108,7 @@
           <h2>Abstracts</h2>
           
 <ul><li><a href="#course">Course Finder</a></li><li>
-<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a> <b>SHORTLISTED - 3rd PRIZE</b></li><li>
+<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a> <b>SHORTLISTED</b></li><li>
 <a href="#drhoo">Dr Hoo</a></li><li>
 <a href="#digitalplanet">Enrichment of Young Digital Planet's biology lessons</a></li><li>
 <a href="#favsyn">FavSync - Collect bookmarks together</a></li><li>
@@ -128,7 +128,7 @@
 <a href="#suggestme">Suggest me content for further reading and learning</a></li><li>
 <a href="#weshare">We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data</a> <b>SHORTLISTED</b> </li><li>
 <a href="#wikipedia">WIkipedia data linker</a></li><li>
-<a href="#yourhistory">yourHistory: Personalising Historic Events</a> <b>SHORTLISTED</b></li></ul>
+<a href="#yourhistory">yourHistory: Personalising Historic Events</a> <b>SHORTLISTED - 3rd PRIZE</b></li></ul>
 
      </div><!-- .block -->      
           <div id="course" name="course" class="block">
@@ -193,7 +193,7 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
           <div id="globetown" name="globetown" class="block">
 
 
-<h3><b>Globe-Town: open data for sustainable development education  - SHORTLISTED<b></h3>
+<h3><b><img src="images/trophy.png" height="200px" align="right" />Globe-Town: open data for sustainable development education  - SHORTLISTED - 2nd PRIZE<b></h3>
 <p><h3><i>Jack Townsend, Andrea Prieto-Vega, Richard Gomer, Will Fyson, Dom Hobson and Huw Fryer</i></h3></p>
 <p><h3>University of Southampton, and independent, Southampton, UK</h3></p>
 <p><h3>Globe-Town.org opens up the successes and the challenges of sustainable development around the world and what they mean for you, through a fun and informative web application built from open data. With it, you can explore the intersections, tensions and trade-offs between the 'three pillars' of sustainable development: the environment, the economy and society. In particular, Globe-Town shows how no one is isolated from the consequences of climate change in an interdependent world, and how responding to it presents a world of opportunities to inspire individuals and entrepreneurs. In order to tackle the big challenges of sustainability, people of all ages need to learn how they affect us personally and what we can do about them. Globe-Town does this by connecting the global with the local, so we can explore the risks, responsibilities and opportunities in an increasingly interconnected world. Globe-Town won a top three place at the first international #Apps4Climate competition, held by the World Bank and judged by the chair of the UNFCC, Christiana Figueres.<h3></p>
@@ -326,7 +326,7 @@ A Museum Moment happens when you are moved, touched, informed, awed, shocked, pu
 
  <div id="polimedia" name="polimedia" class="block">
           
-          <h3><img src="images/trophy.png" height="200px" align="right" /><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates - SHORTLISTED<b></h3>
+          <h3><img src="images/trophy.png" height="200px" align="right" /><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates - SHORTLISTED - 1st PRIZE<b></h3>
 <p><h3><i> Martijn Kleppe, Max Kemman, Henri Beunders, Laura Hollink, Damir Juric, Johan Oomen
 and Jaap Blom</i></h3></p>
 
@@ -380,7 +380,7 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 
 
  <div id="weshare" name="weshare" class="block">
-<h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data - SHORTLISTED<b></h3>
+<h3><b><img src="images/trophy.png" height="200px" align="right" />We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data - SHORTLISTED - 3rd PRIZE<b></h3>
 <p><h3><i>Adolfo Ruiz-Calleja, Guillermo Vega-Gorgojo, Juan I. Asensio-Pérez, Eduardo Gómez-Sánchez, Miguel L. Bote-Lorenzo, Carlos Alario-Hoyos</i></h3></p>
 <p><h3>Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad Carlos III de Madrid, Valladolid, Spain</h3></p>
 <p><h3>Several educational registries (e.g. Schoolforge or Ontoolsearch) provide information about ICT tools in order to help educators when discovering and -which limits their utility- is how their data is sustained, since educational descriptions of ICT tools are hard to create and maintain updated. In order to overcome this problem, some registries (e.g. Cool Tools For Schools) involve their communities of users in their sustainment, following a social approach. Unfortunately, three important drawbacks can be found in these registries: first, the well-known cold-start problem is present; second, their data models can not typically describe information about the educational use of ICT tools; third, these registries are isolated data silos that need to create and keep updated all the data they manage, thus increasing the overall effort of sustaining educational ICT tool datasets. For this reason we propose We-Share, a social annotation application that allows educators to search, create and enrich descriptions of ICT tools from the Web of Data. This characteristic enables We-Share to count with an initial dataset of 6760 ICT tool descriptions automatically gathered from the Web, which are automatically updated by periodically crawling the Web of Data. Further, We-Share enables the community of educators to enrich its dataset reviewing ICT tools and relating them to the educational contexts where they were employed. All the data published on We-Share is available as Linked Open Data.
