--- a/veni.html
+++ b/veni.html
@@ -68,7 +68,7 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="http://linkedup-challenge.org/#what">What is it?</a></li>
-        <li><a href="http://linkedup-challenge.org/#first">Veni competition</a></li>
+        <li><a href="http://linkedup-challenge.org/">Vidi competition</a></li>
         <li><a href="http://linkedup-challenge.org/#how">How to enter</a></li>
 		<li><a href="http://linkedup-challenge.org/#support">Data and support</a></li>
 		<li><a href="http://linkedup-challenge.org/#faq">Frequently Asked Questions</a></li>
