--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
-        <li><a href="#competitions">The competitions</a></li>
+        <li><a href="#challenge">The Challenge</a></li>
         <li><a href="#how">How to enter</a></li>
 		<li><a href="#support">Data and support</a></li>
 		<li><a href="#faq">Frequently Asked Questions</a></li>
@@ -128,8 +128,8 @@
           </div>
 		  <!-- .block -->
 
-		  <div id="competitions" name="competitions" class="block">
-              <h1>LinkedUp Competitions</h1>
+		  <div id="challenge" name="challenge" class="block">
+              <h1>LinkedUp Challenge</h1>
 			  <br/>
               <p><h3>We’re inviting you to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes, and have compiled a <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">catalogue of data sets</a> to get you started. </h3></p>
 			  <p><h3>The idea is to mash up the vast amount of material and data on the internet that can be used in education, ranging from course data, lecture slides, and online courses to Wikipedia articles and YouTube videos. </h3></p>
