--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 
 			  <h3><p>Alternatively, you may already have an idea that you’ve started developing and  we’re keen to help you take this further.</h3></p>
 
-			  <h3><p><img src="images/trophy.png" height="200px" align="right" />
+			  <!--<h3><p><img src="images/trophy.png" height="200px" align="right" />
 			  <strong>The prizes:</strong>
 			  <ul>
 			  <li>1st prize - 2000 EUR</li>
 			  <li>2nd + 3rd prize - 1000 EUR</li>
 			  <li>5 runner up prizes worth 200 EUR each.</li>
-			  </ul></p></h3>
+			  </ul></p></h3> -->
 			  
 			  <p><h3>The second competition will launch in November 2013, and the third in May 2014. Please sign up to our <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">mailing list</a> for further updates.</h3></p>
 			  
@@ -163,12 +163,12 @@
 			  <p><h3>You can choose between two alternatives when submitting your application. You can either submit a paper (following <a href="docs/linkedup_veni_submission_template.doc">the Word template</a>) via <a target="_blank" href="https://www.easychair.org/conferences/?conf=1stlinkedupcompetition">EasyChair</a>, or you fill out the submission form which asks you to define how your prototype fits the evaluation criteria. As part of the submission, you will also be expected to write a 200 word abstract which will be published on this website after the submission deadline. The method by which you submit will not affect your chances for winning.</p></h3>
 			  <p><h3><strong>This form is now closed. It will reopen in the autumn when we invite submissions for the Vidi Competition. Sign up to our low traffic <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to be informed when this takes place. </strong></h3></p>
 			  <a target="_blank" href="https://docs.google.com/a/okfn.org/forms/d/194n3XgFxyrHcsmfxCniAKyqFtAX7pzJPh9FVKxmo0I8/viewform">submission form</a> -->
-			  <!-- p align="center"><a class="btn btn-large btn-success" href="https://docs.google.com/a/okfn.org/forms/d/194n3XgFxyrHcsmfxCniAKyqFtAX7pzJPh9FVKxmo0I8/viewform">Submit via a form</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-large btn-success" href="https://www.easychair.org/conferences/?conf=1stlinkedupcompetition">Submit via EasyChair</a></p-->
+			  <!-- p align="center"><a class="btn btn-large btn-success" href="https://docs.google.com/a/okfn.org/forms/d/194n3XgFxyrHcsmfxCniAKyqFtAX7pzJPh9FVKxmo0I8/viewform">Submit via a form</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-large btn-success" href="https://www.easychair.org/conferences/?conf=1stlinkedupcompetition">Submit via EasyChair</a></p>
               <br/>
 			  <h3><p><ul>What happens next?<br /><br />
 			  <li><strong>16 August 2013</strong>: Notification of shortlist</li>
 			  <li><strong>17 September 2013</strong>: Presentations and an award ceremony at <a target="_blank" href="http://okcon.org">OKCon</a> in Geneva, Switzerland.</li>
-			  </ul></p></h3>			  
+			  </ul></p></h3> -->			  
 
               <br/><br/>
 			  <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
