--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
  	  <div class="nav-collapse">
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
-        <li><a href="#what">What is it?</a></li>
-        <li><a href="#challenge">The Challenge</a></li>
+ 
+        <li><a href="#challenge">LinkedUp Challenge</a></li>
+          <li><a href="#vidi">Vidi Competition</a></li>
         <li><a href="#how">How to enter</a></li>
 		<li><a href="#support">Data and support</a></li>
+			<li><a href="#focused">Focused Tracks</a></li>
 		<li><a href="#faq">Frequently Asked Questions</a></li>
         <li><a href="#contact">Get in touch!</a></li>
-              <li><a href="http://linkedup-challenge.org/veni.html">Veni submissions</a></li>
+              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
 		<li><a href="#usecases">Use cases</a></li></h3>
       </ul>
 	</div>
@@ -96,7 +98,7 @@
         
         </div><!-- .block -->
 		
-        <div id="what" name="what" class="block">
+        <div id="challenge" name="challenge" class="block">
            <p><h3>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</h3><br />
 <h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to large-scale deployable systems.</h3>
 <br />
@@ -128,7 +130,7 @@
           </div>
 		  <!-- .block -->
 
-		  <div id="challenge" name="challenge" class="block">
+		  <div id="vidi" name="vidi" class="block">
               <h1>LinkedUp Challenge</h1>
 			  <br/>
               <p><h3>We’re inviting you to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes, and have compiled a <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">catalogue of data sets</a> to get you started. </h3></p>
