--- a/usecases.html
+++ b/usecases.html
@@ -80,7 +80,7 @@
 		   
 
         <div id="what" name="what" class="block">
-            <p><h3>Below you find large-scale scenarios and use cases for the deployment, evaluation and exploitation of challenge submissions. The use cases came from consultation among LinkedUp project members and associated partners.</p></h3>
+            <p><h3>Below you will find large-scale scenarios and use cases for the deployment, evaluation and exploitation of challenge submissions. The use cases came from consultation among LinkedUp project members and associated partners.</p></h3>
               
 			<p><h3>They present actual, real-life challenges that the related institutions are facing and addressing.</p></h3>
 	
