--- a/usecases.html
+++ b/usecases.html
@@ -82,6 +82,15 @@
         <div id="what" name="what" class="block">
             <p><h3>Below you will find large-scale scenarios and use cases for the deployment, evaluation and exploitation of challenge submissions. The use cases came from consultation among LinkedUp project members and associated partners.</p></h3>
               
+            <li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
+		<li><a href="#what">What is this?</a></li>
+        <li><a href="#teachinggoingsocial">Teaching going social</a></li>
+        <li><a href="#educationizer">Educationizer</a></li>
+		<li><a href="#simplify">Simplify</a></li>
+	
+		<li><a href="#supportingemployeesgrowth">Supporting employees' growth</a></li>
+		<li><a href="#apps">App ideas - from a previous challenge</a></li>
+      </ul>
 			<p><h3>They present actual, real-life challenges that the related institutions are facing and addressing.</p></h3>
 	
 			<p><h3>They aim to provide challenge participants with inspiration and examples of the kinds of problems that submissions can address.</p></h3>
