--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
  
-        <li><a href="#challenge">LinkedUp Challenge</a></li>
+        <li>LinkedUp Challenge</li>
         <li><a href="#vidi"> => Vidi Competition</a></li>
         <li><a href="#how"> => How to enter</a></li>
 		<li><a href="#support"> => Data and support</a></li>
