--- a/veni.html
+++ b/veni.html
@@ -67,13 +67,12 @@
  	  <div class="nav-collapse">
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
-        <li><a href="http://linkedup-challenge.org/#what">What is it?</a></li>
-        <li><a href="http://linkedup-challenge.org/">Vidi competition</a></li>
-        <li><a href="http://linkedup-challenge.org/#how">How to enter</a></li>
-		<li><a href="http://linkedup-challenge.org/#support">Data and support</a></li>
-		<li><a href="http://linkedup-challenge.org/#faq">Frequently Asked Questions</a></li>
-        <li><a href="http://linkedup-challenge.org/#contact">Get in touch!</a></li>
+       <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
+       
+              <li>Veni Competition</li>
+              	<li><a href="#abstracts"> =>Abstracts</a></li></h3>
 		<li><a href="http://linkedup-challenge.org/usecases.html">Use cases</a></li></h3>
+      </ul>
       </ul>
 	</div>
       
