--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
  
-        <li>LinkedUp Challenge</li>
+        <li><b>LinkedUp Challenge</b></li>
         <li><a href="#vidi"> => Vidi Competition</a></li>
         <li><a href="#how"> => How to enter</a></li>
 		<li><a href="#support"> => Data and support</a></li>
@@ -76,7 +76,8 @@
 		<li><a href="#faq"> => Frequently Asked Questions</a></li>
         <li><a href="#contact"> => Get in touch!</a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
-		<li><a href="http://linkedup-challenge.org/usecases.html">Use cases</a></li></h3>
+		<li><a href="http://linkedup-challenge.org/veni.html#abstracts"> =>Abstracts</a></li></h3>
+		            <li><a href="http://linkedup-challenge.org/usecases.html">Use Cases</a></li>
       </ul>
 	</div>
       
