--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <li><a href="#vidi"> => Vidi Competition</a></li>
         <li><a href="#how"> => How to enter</a></li>
 		<li><a href="#support"> => Data and support</a></li>
-			<li><a href="#focused"> => Focused Tracks</a></li>
+			<li><a href="#focused">Focused Tracks =></a></li>
 		<li><a href="#faq"> => Frequently Asked Questions</a></li>
         <li><a href="#contact"> => Get in touch!</a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
