--- a/usecases.html
+++ b/usecases.html
@@ -40,12 +40,15 @@
     <div id="content" class="clearfix">
       <ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
-		<li><a href="#what">What is this?</a></li>
-        <li><a href="#teachinggoingsocial">Teaching going social</a></li>
-        <li><a href="#educationizer">Educationizer</a></li>
-		<li><a href="#simplify">Simplify</a></li>
-		<li><a href="#supportingemployeesgrowth">Supporting employees' growth</a></li></h3>
-      </ul>
+      <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
+        <li><a href="http://linkedup-challenge.org#vidi">Vidi Competition =></a></li>
+        <li><a href="http://linkedup-challenge.org#how">How to enter =></a></li>
+		<li><a href="http://linkedup-challenge.org#support">Data and support =></a></li>
+			<li><a href="http://linkedup-challenge.org#focused">Focused Tracks =></a></li>
+		<li><a href="http://linkedup-challenge.org#faq">Frequently Asked Questions =></a></li>
+        <li><a href="http://linkedup-challenge.org#contact">Get in touch! =></a></li>
+              <li><a href="http://linkedup-challenge.org/usecases.html">Veni Competition</a></li>
+		            <li><b>Use Cases</b></li>
       
       <div class="content-shifter">
         <div id="toptitle" name="top" class="block">
