--- a/usecases.html
+++ b/usecases.html
@@ -40,11 +40,22 @@
     <div id="content" class="clearfix">
       <ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
-                <li><a href="#what">What is this?</a></li>
-        <li><a href="#teachinggoingsocial">Teaching going social</a></li>
-        <li><a href="#educationizer">Educationizer</a></li>
-                <li><a href="#simplify">Simplify</a></li>
-                <li><a href="#supportingemployeesgrowth">Supporting employees' growth</a></li></h3>
+        
+                <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
+        <li><a href="#vidi">Vidi Competition =></a></li>
+        <li><a href="#how">How to enter =></a></li>
+		<li><a href="#support">Data and support =></a></li>
+			<li><a href="#focused">Focused Tracks =></a></li>
+		<li><a href="#faq">Frequently Asked Questions =></a></li>
+        <li><a href="#contact">Get in touch! =></a></li>
+              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
+		            <li><b>Use Cases</b></li>
+		            <li><a href="#teachinggoingsocial">Teaching going social =></a></li>
+        <li><a href="#educationizer">Educationizer =></a></li>
+                <li><a href="#simplify">Simplify =></a></li>
+                <li><a href="#supportingemployeesgrowth">Supporting employees' growth =></a></li>
+                      <li><a href="#apps">Apps =></a></li>
+      </ul>
       </ul>
       
       <div class="content-shifter">
