--- a/usecases.html
+++ b/usecases.html
@@ -11,7 +11,7 @@
   <!--link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet"-->
 
   <!--[if IE 7]>
-          <link rel="stylesheet" type="text/css" href="ie7.css">
+  	<link rel="stylesheet" type="text/css" href="ie7.css">
   <![endif]-->
 
 <script type="text/javascript" src="js/jquery.js"></script>
@@ -24,7 +24,7 @@
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/scrollto.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/scrolllocal.js" type="text/javascript" charset="utf-8"></script>
-          
+  	
   <script type="text/javascript" >
   //Cufon.replace('h1')('h2')('h3')('h4')('h5');
   $(document).ready( function() {
@@ -33,7 +33,22 @@
   </script>
 
 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-33874954-7']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </head>
+
 
 <body>
   <div id="wrapper">
