--- a/usecases.html
+++ b/usecases.html
@@ -51,10 +51,24 @@
 
 
 <body>
-  <div id="wrapper">
-    <div id="content" class="clearfix">
-      <ul id="nav" class="nav">
+  <div id="wrapper" class="container">
+	 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  </a>
+	  <div id="content">
+ 	  <div class="nav-collapse">
+		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
+
         
                 <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
