--- a/usecases.html
+++ b/usecases.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/thickbox.js"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
-  <title>LinkedUp Challenge</title>
+  <title>LinkedUp Challenge: Use cases</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
   <script src="js/cufon.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
@@ -68,7 +68,7 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
  
-        <li><b>LinkedUp Challenge</b></li>
+        <li><a href="http://linkedup-challenge.org/">LinkedUp Challenge</a></li>
         <li><a href="#vidi">Vidi Competition =></a></li>
         <li><a href="#how">How to enter =></a></li>
 		<li><a href="#support">Data and support =></a></li>
@@ -83,9 +83,9 @@
       <div class="content-shifter">
         <div id="toptitle" name="top" class="block">
           <div class="titletext">
-		    <h1 class="title">Veni, Vidi, Vici</h1>
+		    <h1 class="title">Challenges and Use Cases</h1>
 			<br />
-			<h1>Three developer competitions sponsored by the LinkedUp Project</h1>
+			<h1>Real-world needs, scenarios and use cases to inspire you!</h1>
 			
             <a href="http://www.europa.eu/" target="_blank"><img src="images/europa_logo.jpg" style="padding:25px" align="right"/></a>
             <a href="http://www.ec.europa.eu/research/fp7" target="_blank"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"/></a>
