--- a/usecases.html
+++ b/usecases.html
@@ -83,7 +83,7 @@
       <div class="content-shifter">
         <div id="toptitle" name="top" class="block">
           <div class="titletext">
-		    <h1 class="title">Challenges and Use Cases</h1>
+		    <h1 class="title">Challenges and <br />Use Cases</h1>
 			<br />
 			<h1>Real-world needs, scenarios and use cases to inspire you!</h1>
 			
