--- a/usecases.html
+++ b/usecases.html
@@ -71,7 +71,7 @@
         <li><a href="http://linkedup-challenge.org/">LinkedUp Challenge</a></li>
       
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
-		            <li><b>Use Cases</a></b>
+		            <li><b>Use Cases</a></b></li>
 		             <li><a href="http://linkedup-challenge.org/usecases.html#teachinggoingsocial">Teaching going social =></a></li>
         <li><a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify =></a></li>
