--- a/usecases.html
+++ b/usecases.html
@@ -75,7 +75,7 @@
 		             <li><a href="http://linkedup-challenge.org/usecases.html#teachinggoingsocial">Teaching going social =></a></li>
         <li><a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify =></a></li>
-                <li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Employees' growth =></a></li>
+                <li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting Employees' =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#apps">App ideas =></a></li>
       </ul>
 	</div>
