--- a/veni.html
+++ b/veni.html
@@ -69,12 +69,8 @@
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
        <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
         <li><a href="http://linkedup-challenge.org#vidi">Vidi Competition =></a></li>
-        <li><a href="http://linkedup-challenge.org#how">How to enter =></a></li>
-		<li><a href="http://linkedup-challenge.org#support">Data and support =></a></li>
-			<li><a href="http://linkedup-challenge.org#focused">Focused Tracks =></a></li>
-		<li><a href="http://linkedup-challenge.org#faq">Frequently Asked Questions =></a></li>
-        <li><a href="http://linkedup-challenge.org#contact">Get in touch! =></a></li>
               <li><b>Veni Competition</b></li>
+                 <li><a href="http://linkedup-challenge.org/veni.html#abstracts">Abstracts =></a></li>
 		            <li><a href="http://linkedup-challenge.org/usecases.html">Use Cases</a></li>
     
       </ul>
