--- a/focused.html
+++ b/focused.html
@@ -68,16 +68,14 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
  
-    <li><a href="#Simplificator">Simplificator</a></li>
-      <li><a href="#Recommendations">Recommendations</a></li>
-        <li><a href="http://linkedup-challenge.org#challenge">LinkedUp Challenge</a></li>
-          <li><a href="http://linkedup-challenge.org#vidi">Vidi Competition</a></li>
-        <li><a href="http://linkedup-challenge.org#how">How to enter</a></li>
-		<li><a href="http://linkedup-challenge.org#support">Data and support</a></li>
-		<li><a href="http://linkedup-challenge.org#faq">Frequently Asked Questions</a></li>
-        <li><a href="http://linkedup-challenge.org#contact">Get in touch!</a></li>
+
+
+    <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>    
+    <li><b>Focused Tracks</b></li>
+        <li><a href="#Simplificator">Simplificator =></a></li>
+      <li><a href="#Recommendations">Recommendations =></a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
-		<li><a href="http://linkedup-challenge.org/usecases.html">Use cases</a></li></h3>
+		            <li><a href="http://linkedup-challenge.org/usecases.html">Use Cases</a></li>
       </ul>
 	</div>
       
