--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
         <div id="challenge" name="challenge" class="block">
            <p><h3>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</h3><br />
 <h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to large-scale deployable systems.</h3>
-<br /><h3>There will be three consecutive competitions. You can enter just one competition or enter them all; participants of the earlier competitions will benefit from support and feedback from the LinkedUp team.
- </h3>   
+<br />
+<h3>There will be three consecutive competitions. You can enter just one competition or enter them all; participants of the earlier competitions will benefit from support and feedback from the LinkedUp team.
+ </h3>   <br/>
 <ul><li>First competition: <b>Veni</b> (March 2013 - September 2013 - has now taken place): Demo prototypes and applications</li><li>Second competition: <b>Vidi</b> (November 2013 - May 2014): Innovative tools and applications</li>
 <li>Third competition: <b>Vici</b> (May 2014 - November 2014): Mature data-driven applications</li></ul>
 
