--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div><!-- .block -->
 		
         <div id="challenge" name="challenge" class="block">
-           <p><h3>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</h3><br />
+           <p><strong>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</strong><br />
 <h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to large-scale deployable systems.</h3>
 <br />
 <h3>There will be three consecutive competitions. You can enter just one competition or enter them all; participants of the earlier competitions will benefit from support and feedback from the LinkedUp team.
@@ -111,7 +111,7 @@
         
 		
 	
-			<h3><strong> You can join our <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to receive regular updates and be involved in discussions around linked data, open data, and education.</strong></h3>
+			<h3>You can join our <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to receive regular updates and be involved in discussions around linked data, open data, and education.</h3>
 
 </div>
 		  <!-- .block -->
