--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		  <div id="how" name="how" class="block">
               <h1>Enter the competition</h1>
 			  
-			  <!-- p><h3>You can choose between two methods when submitting your application. You can either submit a paper (following the http://docs/linkedup_veni_submission_template.doc Word template) via https://www.easychair.org/conferences/?conf=2ndlinkedupcompetition  EasyChair, or you can fill out the online submission form. As part of the submission, you will also be expected to write a 200 word abstract which will be published on this website after the submission deadline. The method by which you submit will not affect your chances for winning. Your tool should be available to the evaluation panel. A publicly available application or open source code would be a plus, but is not required.</h3></p>
+			  <p><h3>You can choose between two methods when submitting your application. You can either submit a paper (following the <a href="http://docs/linkedup_veni_submission_template.doc"></a>Word template</a>) via <a href="https://www.easychair.org/conferences/?conf=2ndlinkedupcompetition">EasyChair</a>, or you can fill out the online submission form. As part of the submission, you will also be expected to write a 200 word abstract which will be published on this website after the submission deadline. The method by which you submit will not affect your chances for winning. Your tool should be available to the evaluation panel. A publicly available application or open source code would be a plus, but is not required.</h3></p>
 
 <p></h3>You have till February 14th to submit your prototype. 
 h3></p>
@@ -351,6 +351,7 @@ h3></p>
   </div><!-- #wrapper -->
 </body>
 </html>
+
 
 
 
