--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
 <h3><ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
 <li>The focused track will be for development of prototypes that answer the specific questions give below.</li></ul></h3>
 <p><h3>Questions to follow</h3></p>
-	<p><h3><img src="images/trophy.png" height="200px" align="right" /><br/><br />
-			  <strong>The prizes:</strong></h3>
-			 <h3> <ul>
+	<p><h3><img src="images/trophy.png" height="200px" align="right" /><strong>The prizes:</strong></h3><br />
+			 <h3><ul>
 <li>Open track: €5000 (1st), €2500 (2nd), €2500 (3rd)
 </li><li>Each focused task: €3000 (1st prize)
 </li><li>People’s Choice: €1000 
