--- a/veni.html
+++ b/veni.html
@@ -418,7 +418,7 @@ Its SPARQL endpoint can be accessed at: <a href="http://seek.rkbexplorer.com/spa
         <div class="footer">
 		  <div align="center"><img align="center" src="images/edu_photo.jpg" /></div>
           <div id="organisers" name="organisers" class="block">
-		    <a href="http://www.exact-learning.com/en/home" target="_blank"><img src="images/exact.png" height="45px" style="padding:10px" align="right"/></a>
+		    <a href="http://www.lattanziogroup.eu/en/learning.html" target="_blank"><img src="http://linkedup-project.eu/files/2012/07/logo_lattanzio.gif" height="45px" style="padding:10px" align="right"/></a>
             <a href="http://ou.nl/" target="_blank"><img src="images/ounl.png" height="35px" style="padding:10px" align="right"/></a>
             <a href="http://www.open.ac.uk/" target="_blank"><img src="images/ou.png" height="50px" style="padding:10px" align="right"/></a>
             <a href="http://www.l3s.de/" target="_blank"><img src="images/luh.png" height="30px" style="padding:10px" align="right"/></a>
