--- a/usecases.html
+++ b/usecases.html
@@ -299,6 +299,19 @@
                         </div>
 
         <div class="footer">
+		  <div align="center"><img align="center" src="images/edu_photo.jpg" /></div>
+          <div id="organisers" name="organisers" class="block">
+		    <a href="http://www.lattanziogroup.eu/en/learning.html" target="_blank"><img src="http://linkedup-project.eu/files/2012/07/logo_lattanzio.gif" height="45px" style="padding:10px" align="right"/></a>
+            <a href="http://ou.nl/" target="_blank"><img src="images/ounl.png" height="35px" style="padding:10px" align="right"/></a>
+            <a href="http://www.open.ac.uk/" target="_blank"><img src="images/ou.png" height="50px" style="padding:10px" align="right"/></a>
+            <a href="http://www.l3s.de/" target="_blank"><img src="images/luh.png" height="30px" style="padding:10px" align="right"/></a>
+            <a href="http://www.elsevier.com" target="_blank"><img src="images/elsevier.png" height="50px" style="padding:10px" align="right"/></a>
+            <a href="http://www.okfn.org/" target="_blank"><img src="images/okf.png" height="35px" style="padding:0px"  align="right"/></a>
+			<br clear="all"/>
+			<br clear="all"/>
+			<br clear="all"/>
+			<h4 style="text-align:right"><em>The project partners on the LinkedUp Challenge.</em></h4>
+          </div>
           <div class="col-6">
             <p>The LinkedUp Challenge is organised by the <a href="http://www.linkedup-project.eu">LinkedUp Project</a></p>
           </div><!-- .col-6 -->
