--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 	<p><h3><img src="images/trophy.png" height="200px" align="right" /><strong>The prizes:</strong></h3><br />
 			 <h3><ul>
 <li>Open track: €5000 (1st), €2500 (2nd), €2500 (3rd)
-</li><li>Each focused task: €3000 (1st prize)
-</li><li>People’s Choice: €1000 
+</li><li>Each focused track: €3000 (1st prize)
+</li><li>People's Choice: €1000 
 .</li>
 </ul></h3> 
 
