--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
               <p><h3>Review criteria include how innovative the prototype or demo is, how usable it is, the quality of the data, whether there is an existing audience or actual use of the application, and how privacy issues are being dealt with. More information can be found on the submission form (not available yet).</h3></p>
 
-			  <h2>What about Intellectual Property rights?</h2>
+			  <h2>What about Intellectual Property Rights?</h2>
 
               <p><h3>Neither the LinkedUp Challenge, LinkedUp Project, nor any project partners will claim ownership over your prototypes and tools. You will always retain full ownership of the Intellectual Property, and we will be able to advise you regarding legal, exploitation and dissemination issues relating to your submissions.</h3></p>
 
@@ -239,7 +239,7 @@
 
               <p><h3>Linked data refers to data that has been published in a structured way so that it can be easily interlinked and become more useful. <a target="_blank" href="http://opendefinition.org/okd/">Open data</a> is data that can be freely used, reused and redistributed by anyone – subject only, at most, to the requirement to attribute and sharealike. Ideally we’d like you to use linked open data for your prototypes, but as there isn’t much linked open data about yet, we are happy for you to use any data that is openly available.</h3></p>
 
-              <p><h3>Want some tips on how to work with linked data? See our <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/?p=840">developer blog</a></h3></p>
+              <p><h3>Want some tips on how to work with linked data? See our <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/?p=840">developer blog</a>.</h3></p>
 
 
 			  <h2>What is the LinkedUp Project?</h2>
