--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
 			<ul>
 			  <li>Follow us on <a href="http://twitter.com/linkedupproject" target="_blank">@linkedupproject</a></li>
 			  <li>Drop us an <a href="mailto:contact@linkedup-challenge.org" target="_blank">email</a></li>
-			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailing list</a></li>
+		<li>Join our <a href="https://www.facebook.com/groups/linkedupproject/" target="_blank">Facebook Group</a></li>
+			  <li>Subscribe to our <a href="mailto:contact@linkedup-challenge.org" target="_blank">public mailing list</a></li>
 			</ul></h3>
           </div>
 
