--- a/focused.html
+++ b/focused.html
@@ -98,8 +98,8 @@
         </div>
 
 			  <br/>
-<ul><li>Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplicator FT calls for applications easing access to complex information by summarizing them in a simpler form.</li>
-<li>Recommender - </li></ul>
+<ul><h3><li><a href="#simplificator">Simplificator</a> - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplicator FT calls for applications easing access to complex information by summarizing them in a simpler form.</li>
+<li><a href="#recommender">Recommender</a> - </li></h3></ul>
 		  <div id="Simplificator" name="Simplificator" class="block">
               <h1>Track 1: Simplificator</h1>
 
