--- a/focused.html
+++ b/focused.html
@@ -98,6 +98,7 @@
         </div>
 <div id="focused" name="focused" class="block">
 
+<p><h3></h3>The focused track in the Vidi competition is for development of prototypes that solve a particular problem:</h3></p>
 <ul><h3><li><a href="#simplificator">Simplificator</a> - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplicator FT calls for applications easing access to complex information by summarizing them in a simpler form.</li>
 <li><a href="#recommender">Recommender</a> - </li></h3></ul>
 </div>
